fix: secondary destructive gap

--- a/src/components/reusable/splitButton/splitButton.scss
+++ b/src/components/reusable/splitButton/splitButton.scss
@@ -37,6 +37,9 @@
 
   &-margin-overlapped {
     margin-left: -3px;
+    &.select {
+      border-left: 1px solid transparent !important;
+    }
   }
 
   &--small {
